# aicatpin

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  DOCKER_README.md  Dockerfile  FRONTEND_SETUP_COMPLETE.md  Makefile  Makefile.md  OLLAMA_SETUP.md  PI_USAGE_EXAMPLE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_TESTING.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  UPGRADE_SUMMARY.md  VERSIONS.md  VERSION_MANIFEST.md  WHY_SERVICES.md  check-env.sh  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  rerun.sh  setup-and-test.sh  setup.sh  start-services.sh  tailwind.config.js  test-editor.html  test-full.sh  test-ollama.sh  test-services.sh  tsconfig.json  (+1 more)
.pi/: config.json
.pi/prompts/: project.md
src/: App.tsx  main.tsx  test-editor.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Background.tsx  MarkdownPreview.tsx  README.md
src/components/chat/: ChatView.tsx
src/components/editor/: CatPinEditor.tsx  EditorDemo.tsx  EditorView.tsx  SaveDemo.tsx  editor.css  index.ts
src/components/layout/: MainLayout.tsx
src/hooks/: README.md  useCatPinSave.ts  useCloudSync.ts  useEditorMode.ts  useLocalWorkspace.ts
src/lib/: knowledge-vault.ts  markdown.ts  supabase.ts
src/services/: ai.ts
src/stores/: appRouter.ts
src/styles/: globals.css
src/types/: index.ts  knowledge-vault.ts  tauri.ts
supabase/: DATABASE_DESIGN.md  README.md  config.toml  test-knowledge-vault.sql
supabase/migrations/: 20240102000000_create_knowledge_vault.sql
(+10 files in other folders)
